# HUUM_io

./: README.md  pyproject.toml  setup.cfg  setup.py
src/huum_io/: agent.py  appliance.py  consumer_unit.py  holding.py  model.py  model_io.py  room.py  settings.py
src/huum_io/elements/: alternative.py  common_parts.py  condition_expression.py  lifecycle.py  probability.py  usage_habit.py  usage_pattern.py  usage_template.py
src/huum_io/events/: event.py  event_effect.py
src/huum_io/translators/: rate.py  storage.py  timed_storage.py  translator.py
src/huum_io/util/: base_optimisation.py  utilities.py
