[metadata]
# replace with your username:
name = huum_io-SBerendsen
version = 1.0.0
author = Sven Berendsen
author_email = s.berendsen2@newcastle.ac.uk
description = IO methods for the Household Utility Usage Model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nclwater/HUUM_io
project_urls =
    Bug Tracker = github.com/nclwater/HUUM_io/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
